add scala11 build version