@@ -14,6 +14,33 @@ buildscript {
   }
 }
 
+apply plugin: "scala"
+
+sourceSets {
+  v211 {
+    scala {
+      srcDirs = ['src/main/scala']
+    }
+    java {
+      srcDirs = ['src/main/java']
+    }
+  }
+}
+
+configurations {
+  commonCompile
+  v211
+}
+
+task v211Jar(type: Jar, dependsOn: v211Classes) {
+  baseName = "${project.archivesBaseName}_2.11"
+  from sourceSets.v211.output
+}
+
+artifacts {
+  v211 v211Jar
+}
+
 if (!hasProperty('scalaVersion')) {
   ext.scalaVersion = '2.10.4'
 }
@@ -33,13 +60,30 @@ repositories {
 }
 
 dependencies {
-  compile "com.foursquare:common-thrift-bson:2.+"
+  commonCompile "com.foursquare:common-thrift-bson:2.+"
+//  commonCompile "com.twitter:scrooge-core_2.10:${scroogeVersion}" // chane after we have 2.11 version
+
   compile "com.twitter:scrooge-serializer_${scalaLevel}:${scroogeVersion}"
-  compile "com.twitter:scrooge-runtime_${scalaLevel}:${scroogeVersion}"
   compile "org.mongodb:casbah_${scalaLevel}:2.+"
+  compile "org.scala-lang:scala-library:${scalaVersion}"
+
+  v211Compile "com.twitter:scrooge-serializer_2.11:${scroogeVersion}"
+  v211Compile "org.mongodb:casbah_2.11:2.+"
+  v211Compile "org.scala-lang:scala-library:${scala211Version}"
 
   testCompile "junit:junit:4.+"
   testCompile "org.scalatest:scalatest_${scalaLevel}:2.+"
+}
+
+configurations {
+  compile.extendsFrom(commonCompile)
+  v211Compile.extendsFrom(commonCompile)
+  v211.extendsFrom(v211Compile)
+}
+
+compileV211Scala {
+  scalaCompileOptions.fork = true
+  scalaCompileOptions.forkOptions.jvmArgs = ['-XX:MaxPermSize=512m']
 }
 
 sourceSets.test.scala.srcDirs += ["gen/test/scala"]
